--- a/css/style.css
+++ b/css/style.css
@@ -24,3 +24,153 @@
 /* Button CSS */
 
 
+.col-xs-1{
+    
+}
+
+.col-xs-2{
+}
+.col-md-1{
+    border: 1px solid red;
+    color:red;
+}
+
+.col-md-2{
+    border: 1px solid orange;
+    color: orange;
+}
+.col-md-3{
+    border: 1px solid yellow;
+    color:yellow;
+}
+
+.col-md-4{
+    border:1px solid green;
+ color:green;
+
+}
+.col-md-5{
+    border:1px solid blue;
+    color:blue;
+    
+}
+
+.col-md-6{
+    border:1px solid purple;
+    color:purple;
+}
+.col-md-7{
+     border:1px solid red;   
+     color:red;
+}
+
+.col-md-8{
+        border:1px solid orange;
+        color:orange;
+}
+.col-md-9{
+        border:1px solid yellow;
+        color:yellow;
+}
+
+.col-md-10{
+        border:1px solid green;
+        color:green;
+}
+.col-md-11{
+        border:1px solid blue;
+        color:blue;
+}
+.col-md-12{    
+    border:1px solid purple;
+    color:purple;
+}
+
+body{
+    overflow-x:hidden; 
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    color:darkslategray;
+}
+.navbar{
+    text-transform: uppercase;
+    background-color: #f8b88b;
+}
+.footer .row{
+    background-color:#b2cefe;
+    color:white;
+    
+}
+.home-inner{
+    background-image: url('https://i.stack.imgur.com/ReAxi.gif');
+}
+.navbar-brand img {
+    height:7rem;
+}
+.caption{
+    width:100%;
+    max-width:100%;
+    position:absolute;
+    top:40%;
+    z-index:1;
+}
+.caption h2{
+    color:blue;
+    font-size:10rem;
+    text-transform: uppercase;
+    padding-bottom: 6rem;
+}
+h3.heading{
+    text-align: center;
+    font-size:1.9rem;
+    text-transform: uppercase;
+    margin-bottom: 1.9rem;
+}
+.btn{
+    border-width:medium;
+    border-radius: 0;
+    text-transform: uppercase;
+    padding: .5rem 1.1rem;
+    font-size: .9rem;
+
+}
+
+.landing {
+  position: relative;
+  width: 100%;
+  height: 100vh;
+  display: table;
+  background: #E9ECEF;
+  z-index: -1;
+}
+.home-wrap {
+  clip: rect(0, auto, auto, 0);
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+.home-inner {
+  position: fixed;
+  display: table;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  background-position: center center;
+  -webkit-transform: translateZ(0);
+          transform: translateZ(0);
+  will-change: transform;
+}
+
+
+.PastelRed{color:#fea3aa;}
+.PastelOrange{color:#f8b88b;}
+.PastelYellow{color:#faf884;}
+.PastelGreen{color:#baed91;}
+.PastelBlue{color:#b2cefe;}
+.PastelPurple{color: #f2a2e8;}
+/* pink	 fea3aa 	orange f8b88b 	yellow faf884 	 
+/*  green  baed91 	blue b2cefe 	purple f2a2e8 */
+
